# Finance-dashboard

./: README.md
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  seed.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_create_users_table.py  002_create_financial_records_table.py
backend/app/: main.py
backend/app/core/: config.py  db.py  dependencies.py  security.py
backend/app/middlewares/: logging.py
backend/app/models/: __init__.py  financial_record.py  user.py
backend/app/modules/auth/: routes.py  schema.py  service.py
backend/app/modules/dashboard/: routes.py  schema.py  service.py
backend/app/modules/records/: routes.py  schema.py  service.py
backend/app/modules/users/: routes.py  schema.py  service.py
backend/tests/unit/: test_rbac.py  test_records_service.py  test_users_service.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  dashboard.ts  records.ts  users.ts
frontend/src/components/layout/: AppLayout.tsx  ProtectedRoute.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Records.tsx  Users.tsx
frontend/src/store/: authContext.tsx
frontend/src/types/: index.ts
